--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/bangers.html"></a>Bangers and Mash</li>
-        <li><a href="recipes/pkatsucurry.html"></a>Pork Katsu Curry</li>
-        <li><a href="recipes/crimeagainsthumanity.html"></a>(SECRET!!!!) Ultimate Gym Meal "vinceazizz" Edition</li>
+        <li><a href="recipes/bangers.html" rel="noopener noreferrer"></a>Bangers and Mash</li>
+        <li><a href="recipes/pkatsucurry.html" rel="noopener noreferrer"></a>Pork Katsu Curry</li>
+        <li><a href="recipes/crimeagainsthumanity.html" rel="noopener noreferrer"></a>(SECRET!!!!) Ultimate Gym Meal "vinceazizz" Edition</li>
     </ul>
   </body>
 </html>
