Bangers and mash recipe completed.

--- a/recipes/bangers.html
+++ b/recipes/bangers.html
@@ -16,12 +16,27 @@
       <ul>
         <li>If you are Muslim, you can substitute the pork sausage for a Halal meat of your own choice</li>
         <li>The sausage part of this recipe cannot be avoided. Please use a sausage of some sort.</li>
+        <li>Avoid using lean sausages. If you need extra fat, use lard or beef tallow.</li>
         <li>I heavily recommend that you buy fresh peas for this dish.</li>
       </ul>
 
       <h3>Ingredients:</h3>
       <ul>
-        <li></li>
+        <li>One and a half <strong>onions</strong>.</li>
+        <li>Three cloves of <strong>garlic</strong>.</li>
+        <li>A quarter-cup of <strong>plain flour</strong>.</li>
+        <li><strong>Black pepper</strong> to taste.</li>
+        <li>1-2 cups of <strong>beef stock</strong>.</li>
+      </ul>
+
+      <h4>Cooking:</h4>
+      <ul>
+        <li>Brown the sausages on a pan. Remove them once they are brown on both sides. Feel free to remove a little bit of fat but make sure there is enough to cook the onion and garlic.</li>
+        <li>After browning the sausages, sautee the onion and garlic until they are soft.</li>
+        <li>Let them caramellise slightly before introducing the flour into the pan. Cook off the flour with a knob of butter to form a roux. This increases the richness of the gravy. Keep stirring until the roux is smooth and not lumpy.</li>
+        <li>Then, pour the beef stock into the roux. You do not have to use all of it. Ensure that the gravy is not as consistent as water. </li>
+        <li>I would teach you how to make mashed potatoes, but that is pretty self-explanatory. Everyone has their own recipe, so use your favourite.</li>
+        <li>Finally, plate up nicely and enjoy!</li>
       </ul>
       
   </body>
