Begin working on the secret gym abomination.

--- a/recipes/crimeagainsthumanity.html
+++ b/recipes/crimeagainsthumanity.html
@@ -5,4 +5,19 @@
     <meta charset="UTF-8">
     <title>Illegal Gym Pre-Workout - Sigma Recipes</title>
   </head>
+
+  <body>
+    <h1><strong>The Most Cursed Gym Meal</strong></h1>
+    <img src="./what.png" alt="Whatever the hell this is...">
+    <p>3700 calories, 570 grams of protein, maximum shitting and food poisoning. This is the true meal for gym bros with no dignity, no father, and no life</p>
+    <p>Make this abomination if you dare...</p>
+
+    <h2>A LOT OF NOTES</h2>
+    <ul>
+      <li><strong>This recipe is PURELY FOR SHITS AND GIGGLES.</strong></li>
+      <li>Do not make this recipe if you value your life, or you're vinceazizz.</li>
+      <li>You are risking food poisoning, salmonella, and a toilet adventure of a lifetime.</li>
+      <li>If you think that there is a decent version of this recipe, <strong>there isn't.</strong></strong></li>
+    </ul>
+  </body>
 </html>
