Links in index.html finally redirect the user to the corresponding recipe. Turns out that I was a blithering idiot.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/bangers.html" rel="noopener noreferrer"></a>Bangers and Mash</li>
-        <li><a href="recipes/pkatsucurry.html" rel="noopener noreferrer"></a>Pork Katsu Curry</li>
-        <li><a href="recipes/crimeagainsthumanity.html" rel="noopener noreferrer"></a>(SECRET!!!!) Ultimate Gym Meal "vinceazizz" Edition</li>
+      <li><a href="recipes/bangers.html">Bangers and Mash</a></li>
+      <li><a href="recipes/pkatsucurry.html">Pork Katsu Curry</a></li>
+      <li><a href="recipes/crimeagainsthumanity.html">(SECRET!!!) Ultimate Gym Meal 2024 "vinceazizz" Edition</a></li>
     </ul>
   </body>
 </html>
