Ultimate death meal complete.

--- a/recipes/crimeagainsthumanity.html
+++ b/recipes/crimeagainsthumanity.html
@@ -19,5 +19,21 @@
       <li>You are risking food poisoning, salmonella, and a toilet adventure of a lifetime.</li>
       <li>If you think that there is a decent version of this recipe, <strong>there isn't.</strong></strong></li>
     </ul>
+
+    <h3>Ingredients:</h3>
+    <ul>
+      <li>One watermelon (???)</li>
+      <li>One whole kilogram of raw chicken breast (?????)</li>
+      <li>300 grams of shrimps (??????)</li>
+      <li>370 grams of canned tuna (???????????)</li>
+      <li>Half a kilogram of skyr (??????????????????????????????)</li>
+    </ul>
+
+    <h4>Cooking:</h4>
+    <ul>
+      <li>Core out the watermelon and not eat it</li>
+      <li>Shit out the ingredients into the watermelon shell</li>
+      <li>Good luck, try not to die.</li>
+    </ul>
   </body>
 </html>
