Katsu curry work begins. CMD+C, CMD+V and rewrite the writing bits.

--- a/recipes/bangers.html
+++ b/recipes/bangers.html
@@ -16,7 +16,7 @@
       <ul>
         <li>If you are Muslim, you can substitute the pork sausage for a Halal meat of your own choice</li>
         <li>The sausage part of this recipe cannot be avoided. Please use a sausage of some sort.</li>
-        <li>Avoid using lean sausages. If you need extra fat, use lard or beef tallow.</li>
+        <li>Avoid using lean sausages. If you need extra fat, use lard or beef tallow (but not a lot of it).</li>
         <li>I heavily recommend that you buy fresh peas for this dish.</li>
       </ul>
 
