--- a/recipes/pkatsucurry.html
+++ b/recipes/pkatsucurry.html
@@ -20,7 +20,7 @@
 
       <h3>Ingredients:</h3>
       <ul>
-        
+        <li>bah, i'll finish this at some point.</li>
       </ul>
 
       <h4>Cooking:</h4>
